Fix cover alignment and hr between albums and photos

--- a/public/scss/modules/_photo.scss
+++ b/public/scss/modules/_photo.scss
@@ -51,8 +51,8 @@ Photo
     background-color: #d40026;
     background-image: url('/img/missing_cover.svg');
     background-size: cover;
+    background-position: center;
     float: left;
-
 }
 
 .pswp-gallery__item img {
